fix: overlapped timers and info

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -261,6 +261,12 @@ img {
   height: 100%;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .amount-holder {
   position: absolute;
   left: 50%;
